add col chats and col conversation

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
         <div id="app">
 
             <main>
-                <div class="container my-3">
+                <div class="container my-3 d-flex">
+                    <section id="chats">
 
+                    </section>
+                    <section id="conversation">
+
+                    </section>
                 </div>
             </main>
             
