--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Boolzapp</title>
 
-        <!-- CSS Bootstrap-->
+        <!-- CSS -->
+        <!-- Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <!-- Stylesheet -->
         <link rel="stylesheet" href="./css/style.css">
@@ -28,7 +29,17 @@
             <main>
                 <div class="container my-3 d-flex">
                     <section id="chats">
-
+                        <section id="profile-user" class="d-flex justify-content-between">
+                            <div id="user" class="p-2">
+                                <img class="user-image" src="./img/avatar_io.jpg" alt="User Profile Image">
+                                <span class="ps-1">Sofia</span>
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <i class="fa-solid fa-circle-notch text-secondary"></i>
+                                <i class="fa-solid fa-message px-3 text-secondary"></i>
+                                <i class="fa-solid fa-ellipsis-vertical pe-3 text-secondary"></i>
+                            </div>
+                        </section>
                     </section>
                     <section id="conversation">
 
