add silence notification section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
                                 <i class="fa-solid fa-ellipsis-vertical pe-3 text-secondary"></i>
                             </div>
                         </section>
+
+                        <section id="silence-notifications" class="d-flex">
+                            <div id="bell">
+                                <i class="fa-solid fa-bell-slash"></i>
+                            </div>
+                            <div id="active_notifications" class="pt-1">
+                                <span class="d-block">
+                                    Ricevi notifiche dei nuovi messaggi
+                                </span>
+                                <a href="#">
+                                    Attiva notifiche desktop
+                                </a>
+                            </div>
+                        </section>
                     </section>
+
+
                     <section id="conversation">
 
                     </section>
