add start new chat section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
                                 </a>
                             </div>
                         </section>
+
+                        <section id="start-new-chat" class="input-group input-group-sm mb-3 p-1">
+                            <span class="input-group-text bg-light" id="inputGroup-sizing-sm">
+                                <i class="fa-solid fa-magnifying-glass px-2"></i>
+                            </span>
+                            <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                        </section>
+                    
                     </section>
 
 
