fix line height

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                             <div id="bell">
                                 <i class="fa-solid fa-bell-slash"></i>
                             </div>
-                            <div id="active_notifications" class="pt-1">
-                                <span class="d-block">
+                            <div id="active_notifications" class="d-flex flex-column justify-content-center lh-sm">
+                                <span>
                                     Ricevi notifiche dei nuovi messaggi
                                 </span>
                                 <a href="#">
@@ -55,11 +55,15 @@
                             </div>
                         </section>
 
-                        <section id="start-new-chat" class="input-group input-group-sm mb-3 p-1">
+                        <section id="start-new-chat" class="input-group input-group-sm p-1">
                             <span class="input-group-text bg-light" id="inputGroup-sizing-sm">
                                 <i class="fa-solid fa-magnifying-glass px-2"></i>
                             </span>
                             <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                        </section>
+
+                        <section id="chats-view">
+                            
                         </section>
                     
                     </section>
