add messages classes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,23 @@
                         </section>
 
                         <section id="chats-view">
-
+                            <ul>
+                                <li>
+                                    <div class="user py-2 d-flex position-relative">
+                                        <img class="user-image" src="./img/avatar_1.jpg" alt="User Profile Image">
+                                        <div class="d-flex flex-column lh-sm ps-2">
+                                            <span>
+                                                Michele
+                                            </span>
+                                            <span class="text-secondary">
+                                                Ultimo messaggio inviato
+                                            </span>
+                                        </div>
+                                        <span class="text-secondary message_time">12.00</span>
+                                    </div>
+                                </li>
+                                
+                            </ul>
                         </section>
                     
                     </section>
@@ -90,8 +106,23 @@
                             </div>
                         </section>
 
-                        <section id="chat">
-                            <img src="./img/mine.jpg" alt="Background image">
+                        <section id="chat" class="d-flex flex-column">
+                            <div class="sent-message">
+                                <span>
+                                    messaggio 2
+                                </span>
+                                <span class="time text-secondary">
+                                    12.00
+                                </span>
+                            </div>
+                            <div class="recive-message">
+                                <span>
+                                    messaggio 1
+                                </span>
+                                <span class="time text-secondary">
+                                    12.00
+                                </span>
+                            </div>
                         </section>
 
                         <section id="new-message">        
