--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                         </section>
                         <!-- Start new chat section -->
                         <section id="start-new-chat" class="input-group input-group-sm p-1">
-                            <span class="input-group-text bg-light" id="inputGroup-sizing-sm">
+                            <span class="input-group-text bg-light" id="inputGroup-sizing-sm" 
+                            @click="searchAtInput(activeIndex)">
                                 <i class="fa-solid fa-magnifying-glass px-2"></i>
                             </span>
                             <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
