--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </section>
                         <!-- Start new chat section -->
                         <section id="start-new-chat" class="input-group input-group-sm p-1">
-                            <span class="input-group-text bg-light" id="inputGroup-sizing-sm">
+                            <span class="input-group-text" id="inputGroup-sizing-sm">
                                 <i class="fa-solid fa-magnifying-glass px-2"></i>
                             </span>
                             <input type="text" class="form-control"
