--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
                             <div v-for="(message,index) in contacts[activeIndex].messages"
                             class="message position-relative"
                             :class="(message.status === 'sent') ? 'sent-message' : 'receive-message' "
-                            @click="newClass(index)"
-                            :class="(message.active) ? 'active' : '' ">
+                            @click="newMessageProperty(index)">
                                 <span>
                                     {{ message.message }}
                                 </span>
                                 <span class="time text-secondary">
                                     12:00
                                 </span>
-                                <div class="message-menu p-3">
+                                <div class="message-menu p-3"
+                                    :class="(message.active === true) ? 'active' : '' ">
                                     <ul class="m-0">
                                         <li class="text-secondary">
                                             Message Info
